# datablocks

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
datablocks/: __init__.py  collate.py  datablock.py  lazy.py  sequential.py  tensorlike.py  utils.py
tests/: test_datablock.py  test_hierarchical.py  test_lazy.py  test_slicing.py
